# cpp-comprehensive-template

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  vcpkg.json
.github/workflows/: ci.yml  security.yml
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: Security.cmake
docs/: ARCHITECTURE.md  EXTENDING.md  SECURITY_SCANNING.md  TOOLCHAIN.md  TUTORIAL.md  api_design.md  best_practices.md  cli.md  cross_platform_build.md  hpc_optimization.md  rendering_pipeline.md  third_party_integration.md
examples/: CMakeLists.txt  api_demo.cpp  cli_demo.cpp  concurrency_demo.cpp  database_demo.cpp  etl_demo.cpp  hello_world.cpp  hpc_demo.cpp  memory_demo.cpp  patterns_demo.cpp  rendering_demo.cpp  simulation_demo.cpp  third_party_demo.cpp
include/api/: rest_client.h  rest_server.h
include/cli/: cli_helpers.h  output_format.h
include/concurrency/: lock_free_queue.h  parallel.h  thread_pool.h
include/core/: app.h
include/database/: sqlite.h
include/etl/: map_reduce.h  pipeline.h
include/hpc/: parallel_stl.h  simd_ops.h
include/memory/: arena_allocator.h  resource_handle.h  smart_pointers.h
include/patterns/: crtp.h  observer.h  type_erasure.h  visitor.h
include/rendering/: gl_resource.h  render_pipeline.h  shader.h
include/simulation/: ecs.h  numerical.h  physics.h
src/core/: app.cpp
src/memory/: resource_handle.cpp
tests/: CMakeLists.txt  cli_tests.cpp  concurrency_tests.cpp  core_tests.cpp  etl_tests.cpp  memory_tests.cpp  patterns_tests.cpp  simulation_tests.cpp
